--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,7 +19,7 @@
 body {
   color: rgb(var(--foreground-rgb));
   background-image: url('/hands.png');
-  background-position: top left;
+  background-position: top center;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
